<resources>
    <string name="app_name">MobileProgrammingProject</string>

    <string name="action_settings">Settings</string>

    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="verify">Verify</string>
    <string name="sign_out">Sign Out</string>
    <string name="emailpassword_status_fmt">Email User : %1$s (verified : %2$b)</string>
    <string name="firebase_status_fmt">Firebase User : %s</string>
    <string name="auth_failed">Authentication Failed</string>

</resources>
